// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caliper event creator createAssessmentAttemptScoredEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Graded",
  "actor": "https://testHost/api/server",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "generated": Object {
    "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
    "attempt": "https://testHost/api/attempt/testAttemptId",
    "dateCreated": "2017-08-29T16:57:14.500Z",
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "maxScore": 100,
    "scoreGiven": "50",
    "scoredBy": "https://testHost/api/server",
    "type": "Score",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/attempt/testAttemptId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "GradeEvent",
}
`;

exports[`Caliper event creator createAssessmentAttemptStartedEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Started",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "generated": "https://testHost/api/attempt/testAttemptId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/assessment/testDraftId/testAssessment",
  "session": "https://testHost/api/session/testSessionId",
  "type": "AssessmentEvent",
}
`;

exports[`Caliper event creator createAssessmentAttemptSubmittedEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Submitted",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "generated": "https://testHost/api/attempt/testAttemptId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/assessment/testDraftId/testAssessment",
  "session": "https://testHost/api/session/testSessionId",
  "type": "AssessmentEvent",
}
`;

exports[`Caliper event creator createAssessmentItemEvent - when assesmentId is null 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "generated": Object {
    "attempt": "https://testHost/api/attempt/testAttemptId",
    "extensions": Object {
      "selectedTargets": Object {
        "ids": Array [
          "testTargetId",
        ],
      },
      "targetId": "testTargetId",
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/practice/testDraftId/testQuestionId",
  "target": "https://testHost/api/draft/testDraftId#testTargetId",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event creator createAssessmentItemEvent - when assesmentId, attemptId arguments are not provided 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "generated": Object {
    "attempt": "https://testHost/api/practice/testDraftId/testQuestionId",
    "extensions": Object {
      "selectedTargets": Object {
        "ids": Array [
          "testTargetId",
        ],
      },
      "targetId": "testTargetId",
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testQuestionId",
  "target": "https://testHost/api/draft/testDraftId#testTargetId",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event creator createAssessmentItemEvent - when assessmentId and attemptId are null 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "generated": Object {
    "attempt": "https://testHost/api/practice/testDraftId/testQuestionId",
    "extensions": Object {
      "selectedTargets": Object {
        "ids": Array [
          "testTargetId",
        ],
      },
      "targetId": "testTargetId",
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/practice/testDraftId/testQuestionId",
  "target": "https://testHost/api/draft/testDraftId#testTargetId",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event creator createAssessmentItemEvent - when attemptId is null 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "generated": Object {
    "attempt": "https://testHost/api/practice/testDraftId/testQuestionId",
    "extensions": Object {
      "selectedTargets": Object {
        "ids": Array [
          "testTargetId",
        ],
      },
      "targetId": "testTargetId",
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/practice/testDraftId/testQuestionId",
  "target": "https://testHost/api/draft/testDraftId#testTargetId",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event creator createAssessmentItemEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "generated": Object {
    "attempt": "https://testHost/api/attempt/testAttemptId",
    "extensions": Object {
      "selectedTargets": Object {
        "ids": Array [
          "testTargetId",
        ],
      },
      "targetId": "testTargetId",
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testQuestionId",
  "target": "https://testHost/api/draft/testDraftId#testTargetId",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event creator createHideEvent - sets target of hide event when given framename arg 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testQuestionId",
  "session": "https://testHost/api/session/testSessionId",
  "target": "https://testHost/api/draft/testDraftId?context=testFramename#testQuestionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createHideEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testQuestionId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createNavigationEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "NavigatedTo",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#navigation is going here",
  "referrer": "https://testHost/api/draft/testDraftId#navigation came from here",
  "session": "https://testHost/api/session/testSessionId",
  "type": "NavigationEvent",
}
`;

exports[`Caliper event creator createPracticeGradeEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Graded",
  "actor": "https://testHost/api/viewer/client",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "generated": Object {
    "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
    "attempt": "https://testHost/api/practice/testDraftId/testQuestionId",
    "dateCreated": "2017-08-29T16:57:14.500Z",
    "id": "urn:uuid:123",
    "maxScore": 100,
    "scoreGiven": "50",
    "scoredBy": "https://testHost/api/viewer/client",
    "type": "Score",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/practice/testDraftId/testQuestionId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "GradeEvent",
}
`;

exports[`Caliper event creator createPracticeQuestionResetEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Reset",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testQuestionId",
  "session": "https://testHost/api/session/testSessionId",
  "target": "https://testHost/api/practice/testDraftId/testQuestionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createPracticeQuestionSubmittedEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Submitted",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/practice/testDraftId/testQuestionId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createPracticeUngradeEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Reset",
  "actor": "https://testHost/api/server",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "urn:uuid:123",
  "target": "https://testHost/api/practice/testDraftId/testQuestionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createViewEvent - sets target of view event when given framename arg 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Viewed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testItemId",
  "session": "https://testHost/api/session/testSessionId",
  "target": "https://testHost/api/draft/testDraftId?context=testFramename#testItemId",
  "type": "ViewEvent",
}
`;

exports[`Caliper event creator createViewEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Viewed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/draft/testDraftId#testItemId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "ViewEvent",
}
`;

exports[`Caliper event creator createViewerAbandonedEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Abandoned",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https:///api/draft/testDraftId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createViewerResumedEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Resumed",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https:///api/draft/testDraftId",
  "session": "https://testHost/api/session/testSessionId",
  "type": "Event",
}
`;

exports[`Caliper event creator createViewerSessionLoggedInEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "LoggedIn",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/system",
  "session": "https://testHost/api/session/testSessionId",
  "target": "https:///api/draft/testDraftId",
  "type": "SessionEvent",
}
`;

exports[`Caliper event creator createViewerSessionLoggedOutEvent 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "LoggedOut",
  "actor": "https://testHost/api/user/testUserId",
  "edApp": "https://testHost/api/system",
  "eventTime": "2017-08-29T16:57:14.500Z",
  "extensions": Object {
    "foo": "bar",
    "previewMode": false,
  },
  "federatedSession": "https://testHost/api/launch/testOboLaunchId",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://testHost/api/system",
  "session": "https://testHost/api/session/testSessionId",
  "target": "https:///api/draft/testDraftId",
  "type": "SessionEvent",
}
`;
